--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,12 @@ theme: minima
 plugins:
   - jekyll-feed
 
+markdown: kramdown
+
+kramdown:
+  math_engine: katex
+  math_engine_opts: 
+    outputs: mathml
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
