--- a/_config.yml
+++ b/_config.yml
@@ -34,10 +34,7 @@ plugins:
 
 markdown: kramdown
 
-kramdown:
-  math_engine: katex
-  math_engine_opts: 
-    outputs: mathml
+mathjax: true
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
