--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
     Kevin's Blog for all Projects!
 baseurl: "/data-decode" # the subpath of your site, e.g. /blog
 url: "https://kevin-caldwell.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-linkedin_username: Kevin Caldwell
+linkedin_username: kevinhcal
 github_username:  Kevin-Caldwell
 
 # Build settings
