--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Data Docs
 email: kevinhcaldwell@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-    Kevin's Blog for all Projects!
+    Kevin's Personal Blog!
 baseurl: "/data-decode" # the subpath of your site, e.g. /blog
 url: "https://kevin-caldwell.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: kevinhcal
